--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=gpaand
-spring.datasource.password=gpa091083
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
